adding email verification | nearby locations | search locations | location details | seller details | all products | schedules | profile and more

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,12 @@
         android:label="the_pak_tours"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
-        <activity
+
+       <meta-data android:name="com.google.android.geo.API_KEY"
+           android:value="AIzaSyAvHnRDi9zPniQ6oemuhQyFdoNo3qzoy5o"/>
+
+
+       <activity
             android:name=".MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
