--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
    <application
-        android:label="the_pak_tours"
+        android:label="Pak Tours"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
