--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   lottie: ^1.2.1
   timeago: ^3.3.0
   syncfusion_flutter_datepicker: ^20.3.61
-  day_night_time_picker: ^1.1.3
+  day_night_time_picker: 1.1.3
 
   google_maps_flutter: ^2.2.2
   geolocator: ^9.0.2
